--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": false,
-        "outDir": ".",
+        "outDir": "../ts2js",
         "rootDir": ".",
         "sourceMap":false
     },
